# weather-rs

./: Cargo.toml  README.md
src/: main.rs  tray.rs  types.rs  utils.rs
