[package]
name = "weather-rs"
version = "0.1.0"
authors = ["Mark Repka <mrepka@bitovi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="linux")'.dependencies]
libappindicator = "0.5" # Tray icon
gtk = "0.9"

[dependencies]
tray-item = "0.5.0-alpha"
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }